<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="false">

    <Button
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:id="@+id/buttonGo"
        android:onClick="goClickedOnRouteActv"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:background="@drawable/xx"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        android:clickable="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignTop="@+id/imageView" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="unlv.erc.emergo.controller.RouteActivity"
        android:layout_below="@+id/iconMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/iconMap" />

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/selfLocation"
        android:background="@drawable/local_self"
        android:onClick="findSelfLocation"
        android:contextClickable="false"
        android:textColor="#fbf6f6"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="69dp"
        android:layout_above="@+id/imageView"
        android:layout_alignParentEnd="true" />


    <ImageView
        android:layout_width="480dp"
        android:layout_height="67dp"
        android:background="@drawable/gradientevermelho"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/user"
        android:id="@+id/userInformation"
        android:onClick="openUserInformation"
        android:layout_alignTop="@+id/phone"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cancelar_ligacao"
        android:id="@+id/cancelCall"
        android:visibility="invisible"
        android:onClick="cancelCall"
        android:layout_alignBottom="@+id/selfLocation"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/phone"
        android:id="@+id/phone"
        android:onClick="startCall"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignEnd="@+id/cancelCall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="3"
        android:textSize="50dp"
        android:id="@+id/timer"
        android:layout_below="@+id/cancelCall"
        android:layout_centerHorizontal="true" />

</RelativeLayout>