...
        android:clickable = "true"
        android:onClick = "openMap" />

    <ImageView
        android:layout_width = "56dp"
        android:layout_height = "48dp"
        android:id = "@+id/iconList"
        android:layout_alignBottom = "@+id/buttonGo"
        android:layout_toEndOf = "@+id/buttonGo"
        android:layout_marginStart = "30dp"
        android:clickable = "true"
        android:background = "@drawable/icon_list"
        android:longClickable = "false"
...
